Fix collapse behavior of swirl-table-row-group

--- a/packages/swirl-components/src/components/swirl-table-row-group/swirl-table-row-group.css
+++ b/packages/swirl-components/src/components/swirl-table-row-group/swirl-table-row-group.css
@@ -49,7 +49,7 @@
 }
 
 .table-row-group__rows-container {
-  display: contents;
+  overflow: visible clip;
   transition: height 0.3s ease-out;
 }
 
